--- a/build.gradle
+++ b/build.gradle
@@ -75,9 +75,10 @@ dependencies {
 }
 
 integTestCluster {
-  setting 'ingest.opennlp.model.file.names',     'en-ner-persons.bin'
-  setting 'ingest.opennlp.model.file.locations', 'en-ner-locations.bin'
-  setting 'ingest.opennlp.model.file.dates',     'en-ner-dates.bin'
+  setting 'ingest.opennlp.model.file.names',         'en-ner-persons.bin'
+  setting 'ingest.opennlp.model.file.locations',     'en-ner-locations.bin'
+  setting 'ingest.opennlp.model.file.dates',         'en-ner-dates.bin'
+  setting 'ingest.opennlp.model.file.organizations', 'en-ner-organization.bin'
 
   setupCommand 'downloadModels', 'bin/ingest-opennlp/download-models'
 }
@@ -111,6 +112,7 @@ task downloadModels {
     downloadIfNotExists('http://opennlp.sourceforge.net/models-1.5/en-ner-person.bin',   'en-ner-persons.bin')
     downloadIfNotExists('http://opennlp.sourceforge.net/models-1.5/en-ner-location.bin', 'en-ner-locations.bin')
     downloadIfNotExists('http://opennlp.sourceforge.net/models-1.5/en-ner-date.bin',     'en-ner-dates.bin')
+    downloadIfNotExists('http://opennlp.sourceforge.net/models-1.5/en-ner-organization.bin', 'en-ner-organization.bin')
   }
 }
 
